# ai-power-ecom

./: .gitignore  CLAUDE.md  README.md  ai-shop-design-guide_1.md  docker-compose.yml
.claude/rules/: codings.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: e5c7f23fa0d1_initial_tables.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/agent/: context.py  graph.py  tools.py
backend/app/api/: cart.py  chat.py  health.py  products.py  search.py
backend/app/services/: context_manager.py  conversation.py  embeddings.py  search.py  vector_store.py
backend/scripts/: eval_agent.py  seed.py  seed_embeddings.py  test_search.py
backend/tests/: conftest.py  test_agent.py  test_cart.py  test_chat_messages.py  test_context_manager.py  test_integration.py  test_products.py  test_smoke.py  test_tools.py
docs/: architecture-diagram.md  async-task-queue-design.md  cart-drawer-toggle-ui.md  e2e-playwright-setup.md  edge-case-test-plan.md  high-level-design.md  langsmith-eval-setup.md  phase1-backend-skeleton.md  python-for-js-developers.md  system-prompt-improvements.md
frontend/: package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: index.ts
frontend/src/components/: CartDrawer.tsx  ChatPanel.tsx  ProductCard.tsx  ProductGrid.tsx
frontend/tests/: chat-search.spec.ts  helpers.ts
