[project]
name = "backend"
version = "0.1.0"
description = "AI-powered e-commerce shopping assistant backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.129.0",
    "greenlet>=3.3.1",
    "langchain-core>=1.2.13",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.8",
    "openai>=2.21.0",
    "pinecone>=8.0.1",
    "pydantic-settings>=2.13.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.41.0",
]
